fix: fixed nav and main content with overflow-y auto when viewport >= md

--- a/technicalDocumentationPage/css/_layout.sass
+++ b/technicalDocumentationPage/css/_layout.sass
@@ -18,3 +18,7 @@ body
         grid-template-columns: 1fr 3fr
         grid-template-rows: auto auto
         grid-template-areas: "nav main"
+    
+    main, nav
+        height: 100vh
+        overflow-y: auto
