--- a/technicalDocumentationPage/css/_main_styles.sass
+++ b/technicalDocumentationPage/css/_main_styles.sass
@@ -9,11 +9,9 @@ body
     font-weight: normal
     // overflow-x: hidden
 
-body p, body li
-    line-height: $line-height
-
-body main * > *
-    margin: 1rem 0
+li, p, pre
+        line-height: $line-height
+        margin: 1rem 0
 
 img
     width: 100%
