--- a/technicalDocumentationPage/css/_nav.sass
+++ b/technicalDocumentationPage/css/_nav.sass
@@ -1,12 +1,10 @@
 nav
-    // position: relative
-    // width: 100%
     padding: 1rem
     display: flex
     flex-direction: column
     justify-content: space-between
     align-items: stretch
-    height: 100vh
+    height: auto
     .custom_checkbox
         align-self: flex-start
 
